src/client/ReportPage.module.css
.report {
    min-height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
}

.titleInput::placeholder {
    color: white !important;
    opacity: 0.7;
}

.title .titleInput {
    color: white;
    font-size: 16px;
    text-align: center;
    background-color: transparent;
}

.titleText {
    color: white;
    display: block;
    font-size: 16px;
    padding: 5px 12px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.titleEditIcon {
    opacity: 0;
    padding: 2px 7px;
    color: white;
    font-size: 0.8em;
}

.titleTextEdit .titleEditIcon {
    opacity: 0.4;
}

.titleTextEdit {
    cursor: pointer;
}

.title {
    width: 100%;
    min-width: 100px;
    text-align: center;
    position: relative;
}

.body {
    display: flex;
    position: relative;
    flex-direction: row;
    flex: 1;
}

.author {
    position: absolute;
    height: 30px;
    bottom: 0px;
    left: 20px;
    color: #6C7483;
    font-size: 0.8em;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.tabs {
    background-color: #EDEDED;
    background-color: #F7F7F7;
}

.tabs :global .ant-tabs-nav {
    margin-bottom: 0 !important;
}

.resizable {
    width: min(40%, 500px);
    max-width: calc(100% - 400px);
    padding-left: 0px;
}

.datasetSectionWrapper::before {
    content: "";
    position: absolute;
    top: calc(50% - 30px);
    left: 3px;
    border-radius: 10px;
    width: 2px;
    height: 40px;
    background-color: #BEBEBE;
    opacity: 0.7;
    z-index: 10;
}

.datasetSectionWrapper+div div {
    z-index: 10;
}

.datasetSectionWrapper {
    overflow: hidden;
    height: 100%;
}

.datasetSection {
    min-width: 500px;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.keplerBlock {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.keplerFlex {
    flex: 1;
    position: relative;
    background-color: #15232F;
}

.keplerBlock :global #kepler-gl__kepler .side-panel__header__top {
    display: none;
}
.keplerBlock :global #kepler-gl__kepler .color-select__input-group {
    display: none;
}

.keplerBlock :global #kepler-gl__kepler .add-data-button {
    display: none;
}

.keplerBlock :global #kepler-gl__kepler .remove-dataset {
    display: none;
}

.keplerBlock :global #kepler-gl__kepler .map-control-button[data-for=locale] {
    display: none;
}

.keplerBlock :global #kepler-gl__kepler .mapbox-attribution-container {
    display: none;
}

.keplerBlock :global .google-attribution-logo {
    bottom: 10px;
    left: 10px;
    position: absolute;
}

.keplerBlock :global .google-attribution-text {
    position: absolute;
    right: 0;
    bottom: 0;
    float: right;
    background-color: rgb(241,243,244);
    padding-left: 3px;
    display: table-row;
    font-size: 10px;
    color: rgb(60,64,67);
}

.keplerBlock :global .google-attribution-innerText {
    display: table-cell;
}

.keplerBlock :global .tilt-and-rotation-container button {
    position: absolute;
    height: 40px;
    width: 40px;
    background-color: #29323c;
    outline: none;
    border: none;
    padding: 0px;
    opacity: 0.2;
    transition: opacity 0.3s, transform 0.3s, top 0.3s, bottom 0.3s, left 0.3s, right 0.3s;
}

.keplerBlock :global .tilt-and-rotation-container button:hover {
    opacity: 1;
    transform: scale(1.2);
}

.keplerBlock :global .tilt-and-rotation-container img {
    height: inherit;
    width: inherit;
    padding: 5px;
    cursor: pointer;
}

.keplerBlock :global .tilt-and-rotation-container .tilt-up {
    bottom: 20px;
}

.keplerBlock :global .tilt-and-rotation-container .tilt-up img {
    transform: scaleY(-1);
}

.keplerBlock :global .tilt-and-rotation-container .tilt-down {
    top: 20px;
}

.keplerBlock :global .tilt-and-rotation-container .rotate-right {
    right: 20px;
}

.keplerBlock :global .tilt-and-rotation-container .rotate-left img {
    transform: scaleX(-1);
}

.readOnly span {
    margin-right: 5px;
}

.readOnly {
    display: flex;
    flex-direction: row;
    align-items: center;
    color: #6C7483;
    padding-right: 10px;
    font-style: italic;
    vertical-align: middle;
    cursor: pointer;
}

.tabIcon {
    width: 8px;
    height: 8px;
    display: inline-block;
    border-radius: 4px;
    margin-right: 8px;
    margin-left: 2px;
    color: #6A7484 !important;
    font-size: 0.9em;
}

.query {
    display: none;
}

.keplerError {
    color: white;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 42px;
}

